@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
+    compileSdkVersion 31
+    buildToolsVersion '31.0.0'
     def applicationName = "MCStatus"
     defaultConfig {
         applicationId "net.justdave.mcstatus"
         minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 8
-        versionName '1.0.6'
+        targetSdkVersion 31
+        versionCode 10
+        versionName '1.0.8'
     }
     buildTypes {
         release {
@@ -21,9 +21,10 @@ android {
     productFlavors {
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
+    ndkVersion '24.0.7956693 rc2'
     applicationVariants.all { variant ->
         variant.outputs.all { output ->
             def newApkName
