@@ -1,9 +1,9 @@
 To request new features or file bug reports, please visit<br>
-<b>https://github.com/justdave/MCStatus</b><br>
+<b>https://github.com/justdave/MCStatus/issues</b><br>
 <br>
-Copyright 2014-2021 David D. Miller<br>
+Copyright 2014-2022 David D. Miller<br>
 Copyright 2020 Rick van Schijndel<br>
-Copyright 2020-2021 Yan-Luca Lentzen<br>
+Copyright 2020-2022 Yan-Luca Lentzen<br>
 <br>
 Licensed under the MIT License<br>
 <br>
